--- a/log.html
+++ b/log.html
@@ -1803,25 +1803,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,42],[],[[5,0,0,[],[1,22,20],[[0,6,0,0,0,0,0,0,[1,23,18],[[0,7,1,0,8,9,0,0,[1,23,18],[[23,2,10],[25,2,11],[41,2,12]]]]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,44],[],[[4,0,0,[],[1,23,20],[[0,5,0,0,0,0,0,0,[1,24,19],[[0,6,7,0,8,9,0,0,[1,24,19],[[25,2,10],[25,2,11],[25,2,12]]]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Process","*c:\\projects\\ROBOT\\CursoUdemyRobotAvancadoMayara\\Libraries\\Process\\process.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20i8oys9KTS4p1g/yd/IP0XcuLSrOD01Jza0Myk/KL3EsS8xLTkzJ902sTCxK1PfJTCpKLMpMLdYPKMpPTi0uBmkH0XpFINVKdjQy2EY/0Q4ADpZEwg==","eNqtzDEOgDAIAMCvmD5AdoO8wS9QQ21jGxog8fvuzq43HE5CXqpJ2VONmBuAadYoxkMetXtVuz4EnUM8oLdsbE0cDtNT3Ncaoyf650FgQpj0AnN5PSs=","*Exemplo 03: Execute comandos de prompt","*Executando comandos diversos de prompt","*Run Process","*<p>Runs a process and waits for it to complete.\x3c/p>","*mkdir robot_teste, cwd=c:\\\\projects\\\\ROBOT\\\\CursoUdemyRobotAvancadoMayara\\\\Libraries\\\\Process, shell=True","*Starting process:\nmkdir robot_teste","*Waiting for process to complete.","*Process completed."]);
+window.output["strings"] = window.output["strings"].concat(["*","*diffLibrary","*c:\\projects\\ROBOT\\CursoUdemyRobotAvancadoMayara\\Libraries\\DiffLibrary\\diffLibrary.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20i8oys9KTS4p1g/yd/IP0XcuLSrOD01Jza0Myk/KL3EsS8xLTkzJ902sTCxK1PfJTCpKLMpMLdZ3yUxLg/Aq9VMQbL0ikC4lOxpbYKOfaAcAf+xKfg==","*Comparar dois conteúdos","*Compare &quot;meu_arquivo.txt&quot; e &quot;meu_outro_arquivo.txt&quot;","*Diff Files","*DiffLibrary","*<p>Diff two text files\x3c/p>","*${datadir}${/}${ARQUIVO_UM}, ${datadir}${/}${ARQUIVO_DOIS}","*file1: c:\\projects\\ROBOT\\CursoUdemyRobotAvancadoMayara\\Libraries\\DiffLibrary\\meu_arquivo.txt","*file2: c:\\projects\\ROBOT\\CursoUdemyRobotAvancadoMayara\\Libraries\\DiffLibrary\\meu_outro_arquivo.txt","eNqtzjEPgkAMBeC/QtjPxUk2lBGDIbI1MeU4sQr07BWVfy8hLjq79OUt3+sugSo4CfCkAVLvM1SEnC12cBBuBfsAh0kvPHxivYGOagikzni0N2xdgIzO55xqQZmgnqFm7stZuZeLjAkq5I0KUkdDa6xEUWwT8MJXZzVAWWyLI+xGCVw1rp9KrlnTBw4WG97jhDI/tfj0s9a78YRyH+nBK31p/E+XRxX+0t8TknPT"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Process","name":"Process","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"diffLibrary","name":"diffLibrary","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1654169524188;
+window.output["baseMillis"] = 1654170745732;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 50;
+window.output["generated"] = 52;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
