--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,44],[],[[4,0,0,[],[1,23,20],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,22],[],[[4,0,0,[],[1,17,4],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*diffLibrary","*c:\\projects\\ROBOT\\CursoUdemyRobotAvancadoMayara\\Libraries\\DiffLibrary\\diffLibrary.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20i8oys9KTS4p1g/yd/IP0XcuLSrOD01Jza0Myk/KL3EsS8xLTkzJ902sTCxK1PfJTCpKLMpMLdZ3yUxLg/Aq9VMQbL0ikC4lOxpbYKOfaAcAf+xKfg==","*Comparar dois conteúdos"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Cpf","*c:\\projects\\ROBOT\\CursoUdemyRobotAvancadoMayara\\Libraries\\MyCustomLibraries\\cpf.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20i8oys9KTS4p1g/yd/IP0XcuLSrOD01Jza0Myk/KL3EsS8xLTkzJ902sTCxK1PfJTCpKLMpMLdb3rXQuLS7Jz0WIJBek6RWB9CjZ0dR4G/1EOwBqLEk0","*Teste de validar cpf"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"diffLibrary","name":"diffLibrary","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Cpf","name":"Cpf","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1654170745732;
+window.output["baseMillis"] = 1654515139278;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 52;
+window.output["generated"] = 30;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
