--- a/log.html
+++ b/log.html
@@ -1803,25 +1803,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,44],[],[[4,0,0,[],[1,23,20],[[0,5,0,0,0,0,0,0,[1,24,19],[[0,6,7,0,8,9,0,0,[1,24,19],[[25,2,10],[25,2,11],[25,2,12]]]]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,22],[],[[4,0,0,[],[1,17,4],[[0,5,0,0,0,0,0,0,[1,18,1],[[0,6,7,0,0,8,9,0,[1,18,0],[[18,2,10]]],[0,11,12,0,13,9,0,0,[1,18,1],[[19,2,14]]]]],[0,15,0,0,0,0,0,0,[1,19,1],[[0,6,7,0,0,8,9,0,[1,19,0],[[19,2,16]]],[0,11,12,0,13,9,0,0,[1,19,1],[[20,2,17]]]]],[0,18,0,0,0,0,0,0,[1,20,1],[[0,6,7,0,0,8,9,0,[1,20,0],[[20,2,16]]],[0,11,12,0,13,9,0,0,[1,20,0],[[20,2,17]]]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*diffLibrary","*c:\\projects\\ROBOT\\CursoUdemyRobotAvancadoMayara\\Libraries\\DiffLibrary\\diffLibrary.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20i8oys9KTS4p1g/yd/IP0XcuLSrOD01Jza0Myk/KL3EsS8xLTkzJ902sTCxK1PfJTCpKLMpMLdZ3yUxLg/Aq9VMQbL0ikC4lOxpbYKOfaAcAf+xKfg==","*Comparar dois conteúdos","*Compare &quot;meu_arquivo.txt&quot; e &quot;meu_outro_arquivo.txt&quot;","*Diff Files","*DiffLibrary","*<p>Diff two text files\x3c/p>","*${datadir}${/}${ARQUIVO_UM}, ${datadir}${/}${ARQUIVO_DOIS}","*file1: c:\\projects\\ROBOT\\CursoUdemyRobotAvancadoMayara\\Libraries\\DiffLibrary\\meu_arquivo.txt","*file2: c:\\projects\\ROBOT\\CursoUdemyRobotAvancadoMayara\\Libraries\\DiffLibrary\\meu_outro_arquivo.txt","eNqtzjEPgkAMBeC/QtjPxUk2lBGDIbI1MeU4sQr07BWVfy8hLjq79OUt3+sugSo4CfCkAVLvM1SEnC12cBBuBfsAh0kvPHxivYGOagikzni0N2xdgIzO55xqQZmgnqFm7stZuZeLjAkq5I0KUkdDa6xEUWwT8MJXZzVAWWyLI+xGCVw1rp9KrlnTBw4WG97jhDI/tfj0s9a78YRyH+nBK31p/E+XRxX+0t8TknPT"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Cpf","*c:\\projects\\ROBOT\\CursoUdemyRobotAvancadoMayara\\Libraries\\MyCustomLibraries\\cpf.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20i8oys9KTS4p1g/yd/IP0XcuLSrOD01Jza0Myk/KL3EsS8xLTkzJ902sTCxK1PfJTCpKLMpMLdb3rXQuLS7Jz0WIJBek6RWB9CjZ0dR4G/1EOwBqLEk0","*Teste de validar cpf","*Validar se este número &quot;84726810090&quot; é um cpf","*Cpf Validate","*validiaEGeraCPF","*${CPF}","*${VALOR_CPF}","*${VALOR_CPF} = True","*Log","*BuiltIn","*<p>Logs the given message with the given level.\x3c/p>","*True","*Validar se este número &quot;84755810090&quot; é um cpf","*${VALOR_CPF} = False","*False","*Validar se este número &quot;000000&quot; é um cpf"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"diffLibrary","name":"diffLibrary","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Cpf","name":"Cpf","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1654170745732;
+window.output["baseMillis"] = 1654515139278;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 52;
+window.output["generated"] = 30;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
