--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,22],[],[[4,0,0,[],[1,17,4],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,34116],[],[[4,0,0,[],[0,165,33949,5],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Cpf","*c:\\projects\\ROBOT\\CursoUdemyRobotAvancadoMayara\\Libraries\\MyCustomLibraries\\cpf.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20i8oys9KTS4p1g/yd/IP0XcuLSrOD01Jza0Myk/KL3EsS8xLTkzJ902sTCxK1PfJTCpKLMpMLdb3rXQuLS7Jz0WIJBek6RWB9CjZ0dR4G/1EOwBqLEk0","*Teste de validar cpf"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TestSitePractice","*c:\\projects\\ROBOT\\CursoUdemyRobotAvancadoMayara\\WebAvancado\\SuiteSiteTestePracticePO_antes_de_refatorar\\tests\\TestSitePractice.robot","eNrNjkEKgzAQRa9SPEBnL1ZoXUtELV2GMRkxpXXKZCx4+yYL79DF3zz+5/0KT4vQfCnm8KISAJoSPsJPchqhNzczQrNJ5Lun997zxHr94urQc4s7CsKDpoPAsAWlIWWkqNQJOg2OOmNxVYrWk00qVBYUSCAZcjEPju5ZsqKo/+lNBVj/AMeGbjA=","*Caso de Teste com PO 02: Adicionar Cliente","*NoSuchElementException: Message: Could not locate element with index 4\n"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Cpf","name":"Cpf","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:34","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:34","fail":1,"id":"s1","label":"TestSitePractice","name":"TestSitePractice","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1654515139278;
+window.output["baseMillis"] = 1654551420962;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 30;
+window.output["generated"] = 34129;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
